Add restore for journal entry
