# src/main/java/de/eisingerf/elp/journal/controller/JournalController.java
@@ -5,11 +5,13 @@ import de.eisingerf.elp.journal.controller.dto.JournalEntryDto;
 import de.eisingerf.elp.journal.controller.dto.JournalEntryListDto;
 import de.eisingerf.elp.journal.controller.dto.input.CreateJournalEntryDto;
 import de.eisingerf.elp.journal.controller.dto.input.DeleteJournalEntryDto;
+import de.eisingerf.elp.journal.controller.dto.input.PatchJournalEntryDto;
 import de.eisingerf.elp.journal.entity.JournalEntry;
 import de.eisingerf.elp.journal.service.JournalService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.util.Assert;
 import org.springframework.web.bind.annotation.*;
 
 import javax.annotation.Nullable;
@@ -54,10 +56,23 @@ public class JournalController {
 		return JournalEntryDto.from(entry);
 	}
 
-	@DeleteMapping(value = "/{id}")
+	@DeleteMapping("/{id}")
 	@ResponseStatus(HttpStatus.NO_CONTENT)
 	public void deleteEntry(@PathVariable UUID id, @RequestBody(required = false) @Nullable DeleteJournalEntryDto deleteJournalEntryDto) {
+		// TODO: Should be idempotent. Either catch exception that's thrown if entry is already deleted or don't throw exception in first place
 		journalService.delete(id,
 							  deleteJournalEntryDto != null ? deleteJournalEntryDto.reason() : null);
+	}
+
+	@PatchMapping("/{id}")
+	public JournalEntryDto restoreEntry(@PathVariable UUID id, @RequestBody PatchJournalEntryDto patchJournalEntryDto) {
+		Assert.isTrue(patchJournalEntryDto.isDeleted() == null || !patchJournalEntryDto.isDeleted(),
+					  "Use DELETE to delete journal entry");
+		if (patchJournalEntryDto.isDeleted() != null) {
+			// isDeleted MUST be true here
+			var entry = journalService.restore(id);
+			return JournalEntryDto.from(entry);
+		}
+		return null;
 	}
 }
