# src/main/java/de/eisingerf/elp/journal/controller/dto/input/PatchJournalEntryDto.java
@@ -1,0 +1,6 @@
+package de.eisingerf.elp.journal.controller.dto.input;
+
+import javax.annotation.Nullable;
+
+public record PatchJournalEntryDto(@Nullable Boolean isDeleted) {
+}
